develop: fix x-overflow

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -12,4 +12,9 @@ html {
 
 body {
     overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+html, body {
+    background-color: var(--color-white);
 }
